<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="artist.web.musicalsymphony.MusicOnDemand"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_image">

<RelativeLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/root_layout_marginL"
    android:layout_marginEnd="@dimen/root_layout_marginR">

    <TextView
        android:id="@+id/welcomeMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/welcomeMsg"
        android:text="@string/music_demand_msg"/>

    <LinearLayout
        android:id="@+id/search_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/welcomeMsg"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/searchBox"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:hint="@string/music_search"
            android:background="@drawable/search_text_border"
            android:layout_marginTop="@dimen/musicSearch_marginT"
            android:layout_marginStart="@dimen/musicSearch_marginL"
            android:layout_marginEnd="@dimen/musicSearch_marginR"
            android:textColor="@color/white"/>

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/musicSearch_marginT"
            android:layout_marginEnd="@dimen/searchBtn_marginR"
            android:src="@drawable/search_icon" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_box"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recent_search"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_marginTop="@dimen/recent_search_marginBT"
        android:layout_marginBottom="@dimen/recent_search_marginBT"
        android:textSize="@dimen/recent_search_textSize"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/welcomeMsg"
            android:text="@string/song_search_msg"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song_search_name"
        style="@style/song_search"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artist_search_name"
            style="@style/song_search"/>

    </LinearLayout>



</RelativeLayout>
</ScrollView>