<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="artist.web.musicalsymphony.Playlists"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_image">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/rootLayout_padding"
    >

    <TextView
        android:id="@+id/welcomeMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/headerImage"
        style="@style/welcomeMsg"
        android:text="@string/intro_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/welcomeMsg"
        android:layout_marginTop="@dimen/optionLayout_marginT"
        android:layout_marginLeft="@dimen/optionLayout_marginL">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/add_textSize"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:drawableStart="@drawable/add_sign"
            android:drawablePadding="@dimen/add_drawable_padding"
            android:text="@string/add_new_playlist"/>

        <TextView
            android:id="@+id/playlist1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/playlists"
            android:drawableLeft="@drawable/playlist_icon"
            android:drawablePadding="@dimen/add_drawable_padding"
            android:gravity="center_vertical"
            android:text="@string/playlist1"/>

        <TextView
            android:id="@+id/playlist2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/playlists"
            android:drawableLeft="@drawable/playlist_icon"
            android:drawablePadding="@dimen/add_drawable_padding"
            android:gravity="center_vertical"
            android:text="@string/playlist2"/>



    </LinearLayout>

</RelativeLayout>
</ScrollView>
